# chatkit-dev-00

./: .mcp.json  .mcp.library.json  CLAUDE.md  bug.md  notes.md  package.json
apps/cupid-simple/backend/: .dockerignore  .env.example  Dockerfile.dev  pyproject.toml  railway.toml
apps/cupid-simple/backend/app/: main.py  request_context.py  server.py
apps/cupid-simple/backend/app/agents/: __init__.py  cupid_agent.py  profilecard_agent.py
apps/cupid-simple/backend/app/data/: instructions.md  match.yaml
apps/cupid-simple/backend/app/widgets/: ProfileCard00.widget  profilecard_widget.py  widget_template.py
apps/cupid-simple/backend/scripts/: run-backend.sh
apps/cupid/backend/: .dockerignore  Dockerfile  pyproject.toml
apps/cupid/backend/app/: __init__.py  main.py  match_session_store.py  memory_store.py  request_context.py  server.py  thread_item_converter.py
apps/cupid/backend/app/agents/: __init__.py  compatibility_analysis_agent.py  cupid_evaluation_agent.py  cupid_game_agent.py  display_choices_agent.py  display_compatibility_card_agent.py  display_continue_card_agent.py  display_evaluation_card_agent.py  display_match_agent.py  display_mortal_agent.py  end_agent.py  evaluate_scene_score_agent.py  game_dashboard_agent.py  has_ended_agent.py  introduction_agent.py  match_agent.py  mortal_agent.py  schemas.py  start_cupid_game_agent.py
apps/cupid/backend/app/data/: compatibility.yaml  mortal.yaml  today_store.py
apps/cupid/backend/app/instructions/: cupid-agent-match.md  (+4 more)
apps/cupid/backend/scripts/: run-backend.sh
dashboards/cupid/backend/: Dockerfile  pyproject.toml
dashboards/cupid/backend/app/: config.py  constants.py  main.py
(+315 files in other folders)
